
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execve (char*,char**,int *) ;
 scalar_t__ getuid () ;
 int printf (char*) ;

void get_shell() {
  char *argv[] = {"/bin/sh", ((void*)0)};

  if (getuid() == 0){
    printf("[+] Root shell success !! :)\n");
    execve("/bin/sh", argv, ((void*)0));
  }
  printf("[-] failed to get root shell :(\n");
}
