; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44303.c_get_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44303.c_get_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"/bin/sh\00", align 1
@__const.get_shell.argv = private unnamed_addr constant [2 x i8*] [i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i32 0, i32 0), i8* null], align 16
@.str.1 = private unnamed_addr constant [30 x i8] c"[+] Root shell success !! :)\0A\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"[-] failed to get root shell :(\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @get_shell() #0 {
  %1 = alloca [2 x i8*], align 16
  %2 = bitcast [2 x i8*]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %2, i8* align 16 bitcast ([2 x i8*]* @__const.get_shell.argv to i8*), i64 16, i1 false)
  %3 = call i64 (...) @getuid()
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %7 = getelementptr inbounds [2 x i8*], [2 x i8*]* %1, i64 0, i64 0
  %8 = call i32 @execve(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %7, i32* null)
  br label %9

9:                                                ; preds = %5, %0
  %10 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @getuid(...) #2

declare dso_local i32 @printf(i8*) #2

declare dso_local i32 @execve(i8*, i8**, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
